# camunda-mcp-server

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  start-docker.bat  start-docker.sh  test_client.py  test_server_startup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: docker_deployment.md  mcp_protocol.md  vscode_integration.md
examples/: claude_desktop_config.json  usage_examples.md  vscode_copilot_config.json
src/: __init__.py  server.py
src/camunda/: __init__.py  client.py  models.py
src/tools/: __init__.py
tests/: __init__.py  test_camunda_client.py  test_mcp_tools.py
